--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,14 +1,93 @@
 .container {
+  display: flex;
+  width: 100dvw;
+  height: 100dvh;
 }
 
 .left {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .right {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 16px;
+  justify-content: center;
+  min-width: 45vw;
+}
+
+.right h1 {
+  font-size: 64px;
+  margin: 48px 0;
+  word-wrap: break-word;
+  font-weight: bold;
+}
+
+.right h2 {
+  margin-bottom: 32px;
+  font-weight: 700;
+  font-size: 31px;
+}
+.right span {
+  font-size: 11px;
+  width: 300px;
+  min-width: 380px;
+  color: rgb(113, 118, 123);
+}
+.right h3 {
+  margin-top: 40px;
+  font-weight: 700;
+  font-size: 17px;
+  margin-bottom: 20px;
 }
 
 .signup {
+  display: flex;
+  width: 300px;
+  height: 40px;
+  border-radius: 20px;
+  font-size: 15px;
+  background-color: rgb(29, 155, 240);
+  padding: 0 16px;
+  line-height: 20px;
+  text-align: center;
+  font-weight: 700;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  margin-bottom: 8px;
 }
 
 .login {
+  display: flex;
+  padding: 0 16px;
+  width: 300px;
+  height: 40px;
+  border: 1px solid rgb(83, 100, 113);
+  color: rgb(29, 155, 240);
+  text-align: center;
+  font-weight: 700;
+  font-size: 15px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+
+.signup:hover,
+.login:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .right {
+    min-width: 100%;
+  }
 }
