--- a/src/app/(beforeLogin)/_component/main.module.css
+++ b/src/app/(beforeLogin)/_component/main.module.css
@@ -1,93 +1,67 @@
 .container {
-  display: flex;
-  width: 100dvw;
-  height: 100dvh;
+    display: flex;
+    flex-direction: row;
+    background-color: #fff;
+    width: 100dvw;
+    height: 100dvh;
 }
-
 .left {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
 .right {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  padding: 16px;
-  justify-content: center;
-  min-width: 45vw;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-
 .right h1 {
-  font-size: 64px;
-  margin: 48px 0;
-  word-wrap: break-word;
-  font-weight: bold;
+    font-weight: bold;
+    font-size: 64px;
+    margin: 48px 0;
 }
-
 .right h2 {
-  margin-bottom: 32px;
-  font-weight: 700;
-  font-size: 31px;
-}
-.right span {
-  font-size: 11px;
-  width: 300px;
-  min-width: 380px;
-  color: rgb(113, 118, 123);
+    font-weight: bold;
+    font-size: 31px;
+    margin-bottom: 32px;
 }
 .right h3 {
-  margin-top: 40px;
-  font-weight: 700;
-  font-size: 17px;
-  margin-bottom: 20px;
+    font-weight: bold;
+    font-size: 17px;
+    margin-bottom: 20px;
+    margin-top: 40px;
 }
 
 .signup {
-  display: flex;
-  width: 300px;
-  height: 40px;
-  border-radius: 20px;
-  font-size: 15px;
-  background-color: rgb(29, 155, 240);
-  padding: 0 16px;
-  line-height: 20px;
-  text-align: center;
-  font-weight: 700;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  margin-bottom: 8px;
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    padding: 0 16px;
+    font-size: 15px;
+    background-color: rgb(29, 155, 240);
+    color: white;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
+.signup:hover {
+    background-color: rgb(26, 140, 216);
+}
 .login {
-  display: flex;
-  padding: 0 16px;
-  width: 300px;
-  height: 40px;
-  border: 1px solid rgb(83, 100, 113);
-  color: rgb(29, 155, 240);
-  text-align: center;
-  font-weight: 700;
-  font-size: 15px;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px;
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    padding: 0 16px;
+    font-size: 15px;
+    color: rgb(29, 155, 240);
+    border: 1px solid rgb(207, 217, 222);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-.signup:hover,
 .login:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-  }
-  .right {
-    min-width: 100%;
-  }
+    background-color: rgba(29,155,240,0.1);
 }
